[tool.poetry]
name = "ephysafm"
version = "0.1.0"
description = ""
authors = ["Michael Young <michael.young@duke.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.1"
pandas = "^1.4.0"
scipy = "^1.7.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
